# fun-withus-ragspace

./: .gitignore  API_DOCUMENTATION.md  API_ENDPOINTS.md  CRAWLER_CONFIGURATION.md  CRAWLER_SYSTEM_SUMMARY.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_UPDATE_SUMMARY.md  Dockerfile  GITHUB_INTEGRATION.md  GRADIO_ARCHITECTURE_IMPROVEMENT.md  LICENSE  Makefile  POETRY_GUIDE.md  RAG_DESIGN_DOCUMENT.md  RAG_IMPLEMENTATION_PLAN.md  README.md  README_API.md  README_zh.md  REFACTORING_SUMMARY.md  STATUS.md  SUPABASE_CLI_GUIDE.md  SUPABASE_CONFIG_MANAGEMENT.md  SUPABASE_INTEGRATION.md  UI_IMPROVEMENTS.md  app.py  dev.py  env.example  mcp_inspector_config.json  pyproject.toml  render.yaml  requirements.txt  test_mcp_simple.py  test_rag_basic.py  test_rag_system.py  test_vector_search.py
.cursor/rules/: git_commit.mdc  soloflow.mdc
.soloflow/: deployment.md  notes.md  overview.md  requirements.md  system_architecture.md  tasks.md  test_strategy.md  ui_design.md
docs/: README.md
scripts/: supabase_setup.sh
src/ragspace/: __init__.py
src/ragspace/config/: __init__.py  crawler_config.py
src/ragspace/mcp/: __init__.py  tools.py
src/ragspace/models/: __init__.py  docset.py  document.py
src/ragspace/services/: __init__.py  crawler_interface.py  embedding_worker.py  github_crawler.py  mock_crawler.py  rag_manager.py  (+3 more)
supabase/: config.toml  seed.sql
supabase/migrations/: 20241201000000_create_ragspace_schema.sql  20241202000000_add_github_children.sql  20241202000001_restructure_github_documents.sql  20241203000000_create_chunks_table.sql  20241203000001_add_vector_search_function.sql  20241203000002_fix_chunks_rls_policies.sql  20241203000003_fix_documents_rls_policies.sql  20241203000004_update_documents_type_constraint.sql
tests/: README.md  __init__.py  test_crawler_config.py  test_crawler_system.py  test_integration.py  test_mcp_cli.py  test_models.py  test_ui_base.py  test_ui_chat_interface.py  test_ui_components.py  test_ui_crawler.py  test_ui_integration.py  test_ui_knowledge_management.py  test_ui_mcp_tools.py
(+23 files in other folders)
