[tool.poetry]
name = "ragspace"
version = "0.1.0"
description = "AI Knowledge Hub - A modular RAG system for building and querying knowledge bases"
authors = ["RAGSpace Team"]
readme = "README.md"
packages = [{include = "ragspace", from = "src"}]
homepage = "https://github.com/benyue1978/fun-withus-ragspace"
repository = "https://github.com/benyue1978/fun-withus-ragspace"
keywords = ["rag", "ai", "knowledge-base", "mcp", "gradio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^5.40.0"
python-dotenv = "^1.1.0"
requests = "^2.31.0"
numpy = "^1.24.0"
supabase = "^2.0.0"
openai = "^1.99.1"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"
pytest = "^8.0.0"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
ragspace = "app:main"
dev = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/benyue1978/fun-withus-ragspace/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 